--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,18 +8,29 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    
+    
+    strategy:
+      matrix:
+        node-version: [14, 16]
+    
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
+          node-version: ${{ matrix.node-version }}
           fetch-depth: 0
 
       - name: Configure Git
+        with:
+          node-version: ${{ matrix.node-version }}
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.4.1
+        with:
+          node-version: ${{ matrix.node-version }}
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
