--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,15 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     
     
-    strategy:
-      matrix:
-        node-version: [14, 16]
     
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 18
           fetch-depth: 0
 
       - name: Configure Git
@@ -29,6 +26,6 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.4.1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 18
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
