--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,10 +13,12 @@ jobs:
     
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
-          node-version: 18
           fetch-depth: 0
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18    
 
       - name: Configure Git
         run: |
