--- a/charts/nimbit-cloud/Chart.yaml
+++ b/charts/nimbit-cloud/Chart.yaml
@@ -26,4 +26,4 @@ appVersion: "1.16.0"
 dependencies:
   - name: supabase
     version: 0.1.2
-    repository: https://nimbit-software.github.io/helm-charts/
+    repository: file:../supabase
