--- a/charts/node-app/templates/deployment.yaml
+++ b/charts/node-app/templates/deployment.yaml
@@ -40,6 +40,30 @@ spec:
             - name: {{ printf "%s" $key | replace "." "_" | upper | quote }}
               value: {{ $value | quote }}
             {{- end }}
+            {{- if .Values.env }}
+            {{- range .Values.env }}
+            - name: {{ .name }}
+              value: {{ .value | quote }}
+            {{- end }}
+            {{- end }}
+            {{- if .Values.envFromConfigMap }}
+            {{- range .Values.envFromConfigMap }}
+            - name: {{ .name }}
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ .configMapName }}
+                  key: {{ .key }}
+            {{- end }}
+            {{- end }}
+            {{- if .Values.envFromSecret }}
+            {{- range .Values.envFromSecret }}
+            - name: {{ .name }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .secretName }}
+                  key: {{ .key }}
+            {{- end }}
+            {{- end }}
           ports:
             - name: server
               containerPort: {{ .Values.servicePort }}
